--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -99,9 +99,10 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn" onclick="addToCart('<%= producto.id %>', '<%= producto.nombre %>', <%= producto.precio %>, 
-                                        1, '<%= producto.color %>', <%= producto.descuento %>, <%= producto.stock %>, '<%= producto.imagen %>')">
-                                            <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        <button class="add-to-cart-btn"
+                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
                                         </button>
                                     </div>                             
                                 </div>
@@ -154,10 +155,11 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn" onclick="addToCart('<%= producto.id %>', '<%= producto.nombre %>', <%= producto.precio %>, 
-                                            1, '<%= producto.color %>', <%= producto.descuento %>, <%= producto.stock %>, '<%= producto.imagen %>')">
-                                                <i class="fa fa-shopping-cart"></i> Agregar al carrito
-                                            </button>
+                                        <button class="add-to-cart-btn"
+                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        </button>
                                     </div>
                                 </div>
                                 <% }); %>
@@ -209,10 +211,11 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn" onclick="addToCart('<%= producto.id %>', '<%= producto.nombre %>', <%= producto.precio %>, 
-                                            1, '<%= producto.color %>', <%= producto.descuento %>, <%= producto.stock %>, '<%= producto.imagen %>')">
-                                                <i class="fa fa-shopping-cart"></i> Agregar al carrito
-                                            </button>
+                                        <button class="add-to-cart-btn"
+                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        </button>
                                     </div>
                                 </div>
                                 <% }); %>
@@ -264,10 +267,11 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn" onclick="addToCart('<%= producto.id %>', '<%= producto.nombre %>', <%= producto.precio %>, 
-                                            1, '<%= producto.color %>', <%= producto.descuento %>, <%= producto.stock %>, '<%= producto.imagen %>')">
-                                                <i class="fa fa-shopping-cart"></i> Agregar al carrito
-                                            </button>
+                                        <button class="add-to-cart-btn"
+                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        </button>
                                     </div>
                                 </div>
                                 <% }); %>
@@ -319,10 +323,11 @@ document.querySelector(".tablink").click();
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn" onclick="addToCart('<%= producto.id %>', '<%= producto.nombre %>', <%= producto.precio %>, 
-                                            1, '<%= producto.color %>', <%= producto.descuento %>, <%= producto.stock %>, '<%= producto.imagen %>')">
-                                                <i class="fa fa-shopping-cart"></i> Agregar al carrito
-                                            </button>
+                                        <button class="add-to-cart-btn"
+                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                        </button>
                                     </div>
                                 </div>
                                 <% }); %>
@@ -435,9 +440,10 @@ document.querySelector(".tablink").click();
                                     </div>
                                 </div>
                                 <div class="add-to-cart">
-                                    <button class="add-to-cart-btn" onclick="addToCart('<%= producto.id %>', '<%= producto.nombre %>', <%= producto.precio %>, 
-                                        1, '<%= producto.color %>', <%= producto.descuento %>, <%= producto.stock %>, '<%= producto.imagen %>')">
-                                            <i class="fa fa-shopping-cart"></i> Agregar al carrito
+                                    <button class="add-to-cart-btn"
+                                        data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        <i class="fa fa-shopping-cart"></i> Agregar al carrito
                                         </button>
                                 </div>
                             </div>
