--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -2,3 +2,5 @@
   <div class="section"></div>
   <p>&copy; 2025 LaVegaTech | <a href="/conditions" target="_blank">Políticas y Condiciones</a> | <a href="/warranty" target="_blank">Garantías</a></p>
 </footer>
+
+<script src="/js/showPass.js"></script>
