--- a/src/views/store/contact.ejs
+++ b/src/views/store/contact.ejs
@@ -4,7 +4,6 @@
   <link type="text/css" rel="stylesheet" href="/css/contact.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-  <link type="text/css" rel="stylesheet" href="/css/error.css"/>
 
 <div class="contactos-page">
 <body>
@@ -105,7 +104,9 @@
           close: true,
           gravity: "top",
           position: "right",
-          stopOnFocus: true
+          stopOnFocus: true,
+          backgroundColor: "#4CAF50",
+          className: "toast-notification"
         }).showToast();
       });
     </script>
