--- a/src/views/login/verify.ejs
+++ b/src/views/login/verify.ejs
@@ -1,33 +1,30 @@
 <%- include('../components/header.ejs') %>
-
 <body>
-  
-  <div class="verify-container">
-  <h2>Verifica tu correo</h2>
+  <div class="code-container">
+    <h2>Ingresar el código de verificación</h2>
+    <p>Para tu seguridad, enviamos el código a tu correo electrónico <strong><%= email %></strong></p>
 
-  <p class="text">Hemos enviado un código a tu correo <strong><%= email %></strong></p>
+    <form method="POST" action="/api/auth/verifyCode">
+      <input type="hidden" name="email" value="<%= email %>">
+      <input type="hidden" name="type" value="<%= type %>">
+      <input type="text" name="code" placeholder="Código de verificación" required
+        class="<%= validationErrors?.code ? 'input-error' : '' %>">
+      <% if (validationErrors?.code) { %>
+        <p class="field-error"><%= validationErrors.code %></p>
+      <% } %>
+      <% if (error && !validationErrors?.code) { %>
+        <p class="general-error"><%= error %></p>
+      <% } %>
+      <button type="submit">
+        <%= type === 'reset' ? 'Verificar código' : 'Verificar' %>
+      </button>
+    </form>
 
-  <form method="POST" action="/api/auth/verifyCode">
-    <input type="hidden" name="email" value="<%= email %>">
-    <input type="hidden" name="type" value="verify">
-    <input type="text" name="code" placeholder="Código de verificación" required class="<%= validationErrors?.code ? 'input-error' : '' %>">
-    
-    <% if (validationErrors?.code) { %>
-      <p class="field-error"><%= validationErrors.code %></p>
-    <% } %>
-    
-    <% if (error && !validationErrors?.code) { %>
-      <p class="general-error"><%= error %></p>
-    <% } %>
-  
-    <button type="submit">Verificar</button>
-  </form>
-  
-  <form method="POST" action="/api/auth/resendCode">
-    <input type="hidden" name="email" value="<%= email %>">
-    <input type="hidden" name="type" value="verify">
-    <button type="submit">Reenviar código</button>
-  </form>
-</div>
-    
+    <form method="POST" action="/api/auth/resendCode">
+      <input type="hidden" name="email" value="<%= email %>">
+      <input type="hidden" name="type" value="<%= type %>">
+      <button type="submit">Reenviar código</button>
+    </form>
+  </div>
+</body>
 <%- include('../components/footer.ejs') %>
