--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -42,7 +42,7 @@
 				<div class="col-md-2 col-md-pull-5">
 					<div id="product-imgs">
 						<% for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
-							<div class="product-preview">
+							<div class="product-preview" onclick="changeColor({ value: '<%= color %>' }, '<%= producto.id %>')">
 								<img src="<%= imagen %>" alt="<%= color %>">
 							</div>
 						<% } %>
