--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -101,7 +101,7 @@
 								  Cantidad
 								  <div class="input-number product-quantity">
 									<input 
-									  id="cantidad" type="number" value="1" min="1" max="<%= stockColor || producto.stock %>">
+									  id="cantidad" type="number" value="1" min="1" max="<%= stockColor %>">
 									<span class="qty-up" id="qty-up">+</span> <span class="qty-down" id="qty-down">-</span>
 								  </div>
 								</div>
@@ -109,7 +109,7 @@
 								<div class="add-to-cart">
 								  <button 
 									class="add-to-cart-btn" id="add-to-cart-btn" data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>"
-									data-precio="<%= producto.precio %>"data-descuento="<%= producto.descuento %>" data-stock="<%= stockColor || producto.stock %>">
+									data-precio="<%= producto.precio %>"data-descuento="<%= producto.descuento %>" data-stock="<%= stockColor %>">
 									<i class="fa fa-shopping-cart"></i> Agregar al carrito
 								  </button>
 								</div>
