--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -29,7 +29,8 @@
 }
 
 .product-info h5 {
-    margin-bottom: 5px;
+    margin-bottom: 1px;
+    font-size: 16px;
 }
 
 .color-item {
@@ -136,77 +137,23 @@ span.sale {
     Responsividad
 \*----------------------------*/
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .cart-item {
         flex-direction: column;
-        align-items: flex-start;
-        gap: 10px;
-    }
-
-    .product-img {
-        width: 100%;
-        max-width: 100%;
-        margin-right: 0;
-        margin-bottom: 10px;
+        text-align: center;
+        gap: 15px;
     }
 
     .product-info {
-        width: 100%;
+        margin-bottom: 0;
     }
 
-    .product-info h5 {
-        font-size: 1.1rem;
-    }
-
-    .product-items {
-        width: 100%;
-        margin-bottom: 10px;
-    }
-
-    .qty-cantidad {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        font-size: 0.9rem;
-    }
-
-    .input-number input {
-        width: 60px;
-        text-align: center;
-    }
-
-    .remove-btn {
-        align-self: flex-end;
+    .color-item {
+        margin-top: 5px;
     }
 
     .cart-suma {
         margin-top: 30px;
-    }
-}
-
-@media (max-width: 576px) {
-    .cart-suma {
         padding: 15px;
-    }
-
-    .cart-suma .total-price {
-        font-size: 1rem;
-    }
-
-    .btn-checkout {
-        font-size: 0.95rem;
-        padding: 10px;
-    }
-
-    .product-color, .product-price {
-        font-size: 0.9rem;
-    }
-
-    .product-old-price {
-        font-size: 0.8rem;
-    }
-
-    .sale {
-        font-size: 0.8rem;
     }
 }
