--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -84,7 +84,7 @@
                         <div class="footer">
                             <h3 class="footer-title">Servicios</h3>
                             <ul class="footer-links">
-                                <li><a href="#">Mi Cuenta</a></li>
+                                <li><a href="/account">Mi Cuenta</a></li>
                                 <li><a href="/cart">Ver Carrito</a></li>
                                 <li><a href="#">Favoritos</a></li>
                                 <li><a href="#">Mi Pedido</a></li>
