Paypal y carrusel listos

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -135,11 +135,12 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/slick.min.js"></script>
     <script src="/js/nouislider.min.js"></script>
-    <script src="/js/jquery.zoom.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/cart.js"></script>
     <script src="/js/search.js"></script>
     <script src="/js/cartPreview.js"></script>
+    <script src="/js/nav.js"></script>
+
 
 </body>
 </html>
