--- a/src/views/claro.ejs
+++ b/src/views/claro.ejs
@@ -487,3 +487,29 @@ window.addEventListener('popstate', () => setTimeout(syncColorFromURL, 50));
 //         console.error('Error al actualizar carrito:', e);
 //     }
 // }
+
+
+
+<!-- Product main img -->
+				<div class="col-md-5 col-md-push-2">
+					<div id="product-main-img">
+					<% if (producto.imagenes) { 
+						const imagenes = producto.imagenes.split(','); 
+						for (const imagen of imagenes) { %>
+						<div class="product-preview">
+							<img src="<%= imagen %>" alt="<%= producto.nombre %>">
+						</div>
+					<% } } %>
+					</div>
+				</div>
+				<!-- Product thumb imgs -->
+				<div class="col-md-2 col-md-pull-5">
+					<div id="product-imgs">
+					<% for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
+						<div class="product-preview" onclick="changeColor({ value: '<%= color %>' }, '<%= producto.id %>')">
+						<img src="<%= imagen %>" alt="<%= color %>">
+						</div>
+					<% } %>
+				</div>
+			</div>
+			<!-- /Product thumb imgs -->
