--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -354,8 +354,8 @@ document.querySelector(".tablink").click();
             <div class="section-title text-center">
                 <h3 class="title">Nuestras colecciones</h3>
             </div>
-            <% categorias.forEach(categoria => { %>
-            <% if (['moviles', 'smarttv', 'laptops','consolas', 'tablets', 'otros'].includes(categoria.categoria)) { %>
+            <% productos.forEach(productos => { %>
+            <% if (['moviles', 'smarttv', 'laptops','consolas', 'tablets', 'otros'].includes(productos.productos)) { %>
             <!-- shop -->
             <div class="col-md-4 col-xs-6">
                 <div class="shop">
